apps/bux-server/bux/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: bux-server
    app: bux
    instance: bux-server
  name: bux-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: bux-server
      app: bux
      instance: bux-server
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: bux
        instance: bux-server
        app.kubernetes.io/name: bux-server
    spec:
      volumes:
        - name: config-volume
          configMap:
            name: bux-server-env-configs
      containers:
        - name: bux-server
          image: 4chainstudio/bux-server:v0.9.0
          imagePullPolicy: Always
          volumeMounts:
            - name: config-volume
              mountPath: /config/envs
          ports:
            - containerPort: 3003
              name: web
              protocol: TCP
