apps/bux-server/bux/base/service.yml
dapiVersion: v1
kind: Service
metadata:
  name: bux-server
  labels:
    app: bux
    instance: bux-server
spec:
  selector:
    app.kubernetes.io/name: bux-server
  type: ClusterIP
  ports:
    - name: web
      port: 3003
      targetPort: web
